--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 \#*#
 *~
 
+# Vim temp files
+*.swp
+
 # Sublime Text workspace
 # contains potentially sensitive data about filesystem
 *.sublime-workspace
